--- a/smacofBS/smacofBS.tex
+++ b/smacofBS/smacofBS.tex
@@ -196,7 +196,7 @@
 \title{Smacof at 50: A Manual\\
 Part 1: Smacof with B-Splines}
 \author{Jan de Leeuw - University of California Los Angeles}
-\date{Started February 21 2024, Version of April 03, 2024}
+\date{Started February 21 2024, Version of April 04, 2024}
 
 \begin{document}
 \maketitle
@@ -1477,8 +1477,8 @@ itel
 \endhead
 \bottomrule\noalign{}
 \endlastfoot
-0 & 1 & 0 & 0 & 0 & 1 & 2 & 0.80286089 & 85 \\
-0 & 1 & 0 & 0 & 1 & 0 & 2 & 0.34467937 & 20 \\
+0 & 1 & 0 & 0 & 0 & 1 & 3 & 0.23524290 & 42 \\
+0 & 1 & 0 & 0 & 1 & 0 & 3 & 0.06099819 & 43 \\
 0 & 3 & 0 & 1 & 0 & 1 & 2 & 0.34953364 & 106 \\
 0 & 3 & 0 & 1 & 0 & 1 & 3 & 0.07248619 & 115 \\
 5 & 3 & 3 & 1 & 0 & 1 & 2 & 0.34082527 & 667 \\
@@ -1523,6 +1523,15 @@ itel
 }
 
 \caption{gruijter example, linear analysis}\label{fig:gruijterlinear}
+\end{figure}
+
+\begin{figure}
+
+{\centering \includegraphics{smacofBS_files/figure-latex/gruijterlinearconf-1} 
+
+}
+
+\caption{gruijter example, linear analysis}\label{fig:gruijterlinearconf}
 \end{figure}
 
 \begin{figure}
